[gd_scene load_steps=6 format=3 uid="uid://i8xb8locnhi5"]

[ext_resource type="Script" uid="uid://xvxpq3ms1hsh" path="res://src/ConveyorAssembly/roller_conveyor_assembly.gd" id="1_upkoq"]
[ext_resource type="PackedScene" uid="uid://rv5ef61beh35" path="res://parts/ConveyorLegRC.tscn" id="2_a0feq"]
[ext_resource type="PackedScene" uid="uid://dg47c07xr4ksu" path="res://parts/RollerConveyor.tscn" id="2_rxjsx"]
[ext_resource type="PackedScene" uid="uid://pf3t2vk7fmn" path="res://parts/assemblies/SideGuardsAssembly.tscn" id="3_rxjsx"]
[ext_resource type="PackedScene" uid="uid://cg4ii4p426pqb" path="res://parts/assemblies/ConveyorLegsAssembly.tscn" id="4_xgosv"]

[node name="RollerConveyorAssembly" type="Node3D"]
script = ExtResource("1_upkoq")
middle_legs_enabled = true
size = Vector3(4, 0.24, 1.524)

[node name="Conveyor" parent="." instance=ExtResource("2_rxjsx")]
unique_name_in_owner = true
size = Vector3(4, 0.24, 1.524)

[node name="SideGuardsAssembly" parent="Conveyor" instance=ExtResource("3_rxjsx")]
unique_name_in_owner = true

[node name="ConveyorLegsAssembly" parent="Conveyor" instance=ExtResource("4_xgosv")]
unique_name_in_owner = true
middle_legs_enabled = true
_middle_legs_instance_count = 1
leg_model_scene = ExtResource("2_a0feq")
leg_model_grabs_offset = 0.392
